...
                        }
                    } header: {
                        Text("Vorschau")
                    }
                }
            }
            .navigationTitle(isEditMode ? "Fahrt bearbeiten" : "Fahrt erstellen")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Abbrechen") {
                        dismiss()
                    }
...
